feat: translation module